# rust-globs-test

./: Cargo.toml  README.md
src/: lib.rs
